// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters bound 1`] = `
Operator {
  "args": Array [
    Dimension {
      "componentType": "dimension",
      "descending": false,
      "iri": NamedNode {
        "value": "http://example.com/d",
      },
      "isDistinct": false,
      "labels": Array [
        Object {
          "language": "",
          "value": "d",
        },
      ],
    },
  ],
  "operator": "bound",
}
`;

exports[`filters not bound 1`] = `
Operator {
  "args": Array [
    Operator {
      "args": Array [
        Dimension {
          "componentType": "dimension",
          "descending": false,
          "iri": NamedNode {
            "value": "http://example.com/d",
          },
          "isDistinct": false,
          "labels": Array [
            Object {
              "language": "",
              "value": "d",
            },
          ],
        },
      ],
      "operator": "bound",
    },
  ],
  "operator": "!",
}
`;

exports[`filters not in 1`] = `
Operator {
  "args": Array [
    Dimension {
      "componentType": "dimension",
      "descending": false,
      "iri": NamedNode {
        "value": "http://example.com/d",
      },
      "isDistinct": false,
      "labels": Array [
        Object {
          "language": "",
          "value": "d",
        },
      ],
    },
    ArrayExpr {
      "xs": Array [
        NamedNode {
          "value": "http://foo",
        },
      ],
    },
  ],
  "operator": "notin",
}
`;
